--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @CodelineAtyab @TSiyabi @Mouther201 @sulizeruX @Muzna-Adil-Almamari @HananBlc9
+* @CodelineAtyab @maliknoor11 @Os3m3 @soupond @falcon376 @Duaa
